finished hm 5 and improved prevoius research files

--- a/homework_4/research.html
+++ b/homework_4/research.html
@@ -4,12 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Statistical independence</title>
-    <!-- Includi la libreria MathJax -->
     <script type="text/javascript" id="MathJax-script" async
     src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js">
     </script>
-
-    <!-- Imposta lo stile per il font Lato e la dimensione -->
     <style>
         body {
             margin: 10;
@@ -19,8 +16,8 @@
         p {
             font-size: 11pt;
         }
-        h1 {
-            font-family: 'Lato', sans-serif;
+        h1, h2 {
+            color: #0b5394;
         }
     </style>
 </head>
