--- a/homeowrk_3/reaserch.html
+++ b/homeowrk_3/reaserch.html
@@ -7,19 +7,17 @@
     <script type="text/javascript" id="MathJax-script" async
     src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js">
     </script>
-
     <style>
         body {
             margin: 10;
             padding: 0;
+            font-family: 'Lato', sans-serif;
         }
         p {
-            font-family: 'Lato', sans-serif;
             font-size: 11pt;
         }
-        h1 {
-            font-family: 'Lato', sans-serif;
-            font-size: 15pt;
+        h1, h2 {
+            color: #0b5394;
         }
     </style>
 </head>
@@ -36,7 +34,7 @@
         \]
     </p>
 
-    <h1>1. Case of Two Points:</h1>
+    <h2>1. Case of Two Points:</h2>
 
     <p>
         First, consider the simplest case where we have just two points \( x_1 \) and \( x_2 \). We want to minimize the sum of absolute deviations:
@@ -52,7 +50,7 @@
         The function \( |x_1 - c| + |x_2 - c| \) is minimized when \( c \) is between \( x_1 \) and \( x_2 \) or at one of them. Specifically, the minimum occurs at the median of the two points, which is \( \frac{x_1 + x_2}{2} \) for even numbers, or one of the middle points for odd.
     </p>
 
-    <h1>2. General Case:</h1>
+    <h2>2. General Case:</h2>
 
     <p>
         Now, let’s extend this to \( n \) points, where \( n \) can be either even or odd. The function we want to minimize is:
@@ -110,7 +108,7 @@
 
     
 
-    <h1>3. Conclusion:</h1>
+    <h2>3. Conclusion:</h2>
 
     <p>
         The absolute deviation is minimized when \( c \) is the value that balances the number of data points on either side. This is exactly the median of the dataset:
