--- a/homework_8/simulator.html
+++ b/homework_8/simulator.html
@@ -85,6 +85,7 @@
             v: 0.978, w: 2.360, x: 0.150, y: 1.974, z: 0.074
         };
 
+        // Frequency distribution of letters in Italian (percentage)
         const italianFrequencies = {
             a: 11.74, b: 1.02, c: 4.51, d: 3.87, e: 11.79, f: 0.85, g: 1.40,
             h: 0.06, i: 10.73, j: 0.02, k: 0.04, l: 6.53, m: 2.51, n: 6.71,
